WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58578
Crash in NetscapePluginModule::tryGetSitesWithData when NPP_GetSitesWithData returns null
https://bugs.webkit.org/show_bug.cgi?id=58578
Summary
Crash in NetscapePluginModule::tryGetSitesWithData when NPP_GetSitesWithData ...
Anders Carlsson
Reported
2011-04-14 14:51:44 PDT
Crash in NetscapePluginModule::tryGetSitesWithData when NPP_GetSitesWithData returns null
Attachments
Patch
(1.34 KB, patch)
2011-04-14 14:52 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-04-14 14:52:55 PDT
Created
attachment 89659
[details]
Patch
Anders Carlsson
Comment 2
2011-04-14 15:16:16 PDT
Committed
r83901
: <
http://trac.webkit.org/changeset/83901
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug