2011-04-14  Anders Carlsson  <andersca@apple.com>

Reviewed by Dan Bernstein.

        Crash in NetscapePluginModule::tryGetSitesWithData when NPP_GetSitesWithData returns null
        https://bugs.webkit.org/show_bug.cgi?id=58578
        <rdar://problem/9275201>

        It's OK for NPP_GetSitesWithData to return null.

        * Shared/Plugins/Netscape/NetscapePluginModule.cpp:
        (WebKit::NetscapePluginModule::tryGetSitesWithData):


Canonical link: https://commits.webkit.org/73655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83901 268f45cc-cd09-0410-ab3c-d52691b4dbfc