Source/WebKit2/Shared/Plugins/Netscape/NetscapePluginModule.cpp
@@ -84,6 +84,11 @@ bool NetscapePluginModule::tryGetSitesWithData(Vector<String>& sites)
         return false;
 
     char** siteArray = m_pluginFuncs.getsiteswithdata();
+
+    // There were no sites with data.
+    if (!siteArray)
+        return true;
+
     for (int i = 0; siteArray[i]; ++i) {
         char* site = siteArray[i];
 
